<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/owl" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="237dp"
        android:layout_height="92dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/Aowlbot"
        android:textColor="#CD0808"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="75dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/i" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0000FF"
            android:drawablePadding="8dp"
            android:text="HOME"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:rippleColor="#0B16EA" />

        <Button
            android:id="@+id/searchPage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#0000FF"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:text="@string/Asearch"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wordDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#0000FF"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:text="@string/Awod"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/saveWord"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#0000FF"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:text="@string/AsaveWord"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
        </LinearLayout>

    <EditText
        android:id="@+id/word"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:ems="10"
        android:hint="@string/Atype"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/meaning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.638" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/meaning"
        app:layout_constraintTop_toTopOf="@+id/search"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Asearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/meaning"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/myName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agam"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.538" />


</androidx.constraintlayout.widget.ConstraintLayout>